# ts-automl

./: .gitignore  LICENSE  LICENSE.md.txt  LICENSE.txt  README.md  pyproject.toml  requirements.txt
.github/workflows/: python-app.yml
Lib/: data_input.py  feature_selection.py  pipeline_tests.py  pipelines.py  plotting.py  prediction.py  preprocessing.py
Working Notebooks/: Dev_LSTM.ipynb  Ejemplo completo.ipynb  Prediction_FeatureSelection.ipynb  Prediction_LightGBM.ipynb  Prediction_Pipelines.ipynb  Preprocessing_Data_input.ipynb  Preprocessing_ForecastingHorizon.ipynb  Preprocessing_Lag_creation.ipynb  Preprocessing_Train_test_split.ipynb  Preprocessing_feature_extraction.ipynb  Recursive_forecast.ipynb  Recursive_forecast_veronica.ipynb  extract_features.py  extract_sample_features.py  import_data_idbox.py
docs/: index.md
poetry/ts-automl/: README.md
poetry/ts-automl/tests/: pipeline_tests.py
poetry/ts-automl/ts_automl/: feature_selection.py  pipelines.py
tests/: test_ts_automl.py
tests/test_series/: Aguas_Conductividad_Condensados.csv  Aguas_Nivel_Acido.csv  Presion_Aire_Mecheros.csv  Serie1.csv  Serie2.csv  Serie3.csv  Serie5.csv
ts_automl/: api.py  data_input.py  metric.py  metrics.py  pipelines.py  plotting.py  prediction.py  preprocessing.py  validation.py
