[tool.poetry]
name = "ts-automl"
version = "0.2.0"
description = "An AutoML library for time series forecasting"
authors = ["Miguel Murillo <mmurillo@cic.es>"]
license = "MIT"
readme = "README.md"
repository = "https://gitlab.corp.cic.es/CIC/IDbox/idbox-ml-i-d/ts-automl"

[tool.poetry.dependencies]
python = "^3.8"
tensorflow = "2.4.1"
keras = "2.4.3"
keras-tcn = "^3.4.0"
pandas = "^1.2.4"
plotly = "^4.14.3"
skits = "^0.1.2"
lightgbm = "^3.2.1"
statsmodels = "^0.12.2"
sktime = "^0.6.0"
scikit-learn = "^0.24.2"
fastapi = "^0.65.1"
python-multipart = "^0.0.5"
hpsklearn = {git = "https://github.com/hyperopt/hyperopt-sklearn"}
uvicorn = "^0.14.0"


[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
